# labkey-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  cliff.toml  clippy.toml  justfile  opencode.json
.agents/: PLAN.md  PROMPT.md  RESEARCH.md  prd.json  progress.txt
.github/workflows/: pages.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/guides/: authentication.md  error-handling.md  filters-and-sorts.md  getting-started.md  how-labkey-works.md  modifying-data.md  querying-data.md
book/src/recipes/: bulk-import.md  cross-folder-queries.md  labkey-sql.md  managing-lists.md  paginate-results.md  security-and-permissions.md  working-with-assays.md
book/src/reference/: module-map.md
examples/: error_handling.rs  execute_sql.rs  experimental_sql.rs  filters_and_sorts.rs  insert_update_delete.rs  pagination.rs  select_rows.rs
skills/labkey-rs/: SKILL.md
src/: assay.rs  client.rs  common.rs  di.rs  domain.rs  error.rs  experiment.rs  filter.rs  lib.rs  list.rs  message.rs  participant_group.rs  pipeline.rs  query.rs  report.rs  sort.rs  specimen.rs  storage.rs  visualization.rs
src/security/: constants.rs  container.rs  group.rs  mod.rs  permission.rs  policy.rs  session.rs  types.rs  user.rs
tests/: client_integration.rs
tests/common/: mod.rs
tests/fixtures/: api_error.json  get_schemas.json  query_details.json  whoami.json
