[package]
name = "labkey-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Unofficial Rust client for the LabKey Server REST API"
repository = "https://github.com/nrminor/labkey-rs"
keywords = ["labkey", "lims", "api-client", "rest"]
categories = ["api-bindings", "science"]

[features]
default = []
internal-test-support = []

[dependencies]
base64 = "0.22.1"
bon = "3.9.0"
reqwest = { version = "0.13.2", features = ["json", "query", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
url = "2.5.8"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6.5"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.dev]
incremental = true
lto = false

[profile.release]
lto = true
codegen-units = 1
strip = true
